WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131722
[iOS][WK2] Fix annoying scrolling bugs
https://bugs.webkit.org/show_bug.cgi?id=131722
Summary
[iOS][WK2] Fix annoying scrolling bugs
Benjamin Poulain
Reported
2014-04-15 22:15:01 PDT
[iOS][WK2] Fix annoying scrolling bugs
Attachments
Patch
(3.97 KB, patch)
2014-04-15 22:17 PDT
,
Benjamin Poulain
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-04-15 22:17:42 PDT
Created
attachment 229430
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-04-15 23:01:29 PDT
Comment on
attachment 229430
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229430&action=review
Thanks for fixing!
> Source/WebCore/ChangeLog:11 > + keep changing the scroll position to incorrect values.
Why does it compute incorrect values?
Simon Fraser (smfr)
Comment 3
2014-04-16 10:43:34 PDT
Comment on
attachment 229430
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229430&action=review
> Source/WebCore/platform/ScrollView.cpp:545 > +#if PLATFORM(IOS) > + UNUSED_PARAM(desiredOffset); > + return; > +#else
Afterthought: should this be if delegatesScrolling() rather than an #ifdef?
Benjamin Poulain
Comment 4
2014-04-16 20:27:23 PDT
Committed
r167411
: <
http://trac.webkit.org/changeset/167411
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug